[gd_scene load_steps=5 format=3 uid="uid://c7vh1wqik6xv1"]

[ext_resource type="Theme" uid="uid://b3l700823f32o" path="res://theme/pixie_theme.tres" id="1_scuuo"]
[ext_resource type="Script" path="res://main_editor/swatchboard/swatchboard.gd" id="2_va1io"]
[ext_resource type="Texture2D" uid="uid://coadpv1sk3ch3" path="res://theme/icons/toolbox.png" id="3_kwn18"]
[ext_resource type="Texture2D" uid="uid://bddil4i5cntit" path="res://theme/icons/close.png" id="4_03oa0"]

[node name="swatchboard" type="Control"]
layout_mode = 3
anchor_right = 0.251
anchor_bottom = 1.0
offset_right = -0.919983
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_scuuo")
script = ExtResource("2_va1io")

[node name="swatchboardbg" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 42.0
offset_right = 395.0
offset_bottom = 1080.0
color = Color(0.688992, 0.377824, 0.522025, 1)

[node name="Button" type="Button" parent="swatchboardbg"]
layout_mode = 0
offset_left = 119.0
offset_top = -42.0
offset_right = 213.0
text = "tools"
icon = ExtResource("3_kwn18")
icon_alignment = 2

[node name="Button2" type="Button" parent="swatchboardbg"]
layout_mode = 0
offset_top = -42.0
offset_right = 119.0
text = "nodes"

[node name="Button3" type="Button" parent="swatchboardbg"]
layout_mode = 0
offset_left = 213.0
offset_top = -42.0
offset_right = 333.0
text = "image"

[node name="Button4" type="Button" parent="swatchboardbg"]
layout_mode = 0
offset_left = 333.0
offset_top = -42.0
offset_right = 395.0
icon = ExtResource("4_03oa0")
icon_alignment = 1

[node name="toolboxunder" type="ColorRect" parent="swatchboardbg"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 384.0
offset_bottom = 292.0
mouse_filter = 1
color = Color(0.187176, 0.187176, 0.187176, 1)

[node name="toolbox" type="ItemList" parent="swatchboardbg/toolboxunder"]
layout_mode = 0
offset_left = -1.0
offset_right = 374.0
offset_bottom = 283.0
mouse_filter = 1
max_text_lines = 8
item_count = 1
max_columns = 4
icon_mode = 0
item_0/text = ""

[node name="toolboxoptions" type="GridContainer" parent="swatchboardbg"]
layout_mode = 0
offset_left = 9.0
offset_top = 299.0
offset_right = 386.0
offset_bottom = 654.0

[node name="layers" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 704.0
offset_right = 388.0
offset_bottom = 1073.0
mouse_filter = 1

[node name="enterareatop" type="Container" parent="."]
layout_mode = 2
offset_left = -1228.0
offset_right = 393.0
offset_bottom = 38.0
mouse_filter = 2

[node name="enterareaswatch" type="Container" parent="."]
layout_mode = 2
offset_left = 1.0
offset_right = 393.0
offset_bottom = 1074.0
mouse_filter = 2

[node name="leavearea" type="Container" parent="."]
layout_mode = 0
offset_left = -932.0
offset_right = 1.0
offset_bottom = 1080.0

[connection signal="mouse_entered" from="swatchboardbg" to="." method="_on_swatchboard_mouse_entered"]
[connection signal="mouse_exited" from="swatchboardbg" to="." method="_on_swatchboardbg_mouse_exited"]
[connection signal="item_activated" from="swatchboardbg/toolboxunder/toolbox" to="." method="_on_toolbox_item_selected"]
[connection signal="item_clicked" from="swatchboardbg/toolboxunder/toolbox" to="." method="_on_toolbox_item_selected"]
[connection signal="item_selected" from="swatchboardbg/toolboxunder/toolbox" to="." method="_on_toolbox_item_selected"]
[connection signal="mouse_entered" from="enterareatop" to="." method="_on_swatchboard_mouse_entered"]
[connection signal="mouse_entered" from="enterareaswatch" to="." method="_on_swatchboard_mouse_entered"]
[connection signal="mouse_entered" from="leavearea" to="." method="_on_leavearea_mouse_entered"]
